dev Changes in dev: [~] Bug fix: paginator not showing in table component

--- a/apps/variant-browser/src/app/components/table/table.component.css
+++ b/apps/variant-browser/src/app/components/table/table.component.css
@@ -1,22 +1,22 @@
 table {
   width: 100vw;
-  max-height: 50vw;
+  max-height: 100vw;
 }
 
-.truncate-cell {
-  max-width: 150px;
-  white-space: break-spaces;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
+/*.truncate-cell {*/
+/*  max-width: 150px;*/
+/*  white-space: break-spaces;*/
+/*  overflow: hidden;*/
+/*  text-overflow: ellipsis;*/
+/*}*/
 
-tr.mat-footer-row td {
-  font-weight: bold;
-  text-align: center;
-}
+/*tr.mat-footer-row td {*/
+/*  font-weight: bold;*/
+/*  text-align: center;*/
+/*}*/
 
 :host ::ng-deep .p-sidebar-bottom {
-  height: 75%;
+  height: 65%;
 }
 
 :host ::ng-deep .button-float {
@@ -36,8 +36,16 @@ tr.mat-footer-row td {
   color: white;
 }
 
+:host ::ng-deep .p-datatable {
+  z-index: 500;
+}
+
 .mat-mdc-row .mat-mdc-cell {
   border-bottom: 1px solid transparent;
   border-top: 1px solid transparent;
   cursor: pointer;
+}
+
+.centered {
+  text-align: center;
 }
